--- a/common/assets/Theme/assets/css/main.css
+++ b/common/assets/Theme/assets/css/main.css
@@ -1,3 +1,19 @@
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px; /* height of horizontal scrollbar ← You're missing this */
+}
+
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background: rgb(219, 219, 219);
+}
+
 button {
     margin: 0px 3px;
 }
@@ -172,7 +188,13 @@ input[type=text], input[type=password], select, textarea {
 }
 
 #modalSpace .modal-dialog {
-    width: 100% !important;
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    #modalSpace .modal-dialog.textModal {
+        width: 30%;
+    }
 }
 
 .modal-content {
@@ -393,8 +415,20 @@ html.app .loginWrapper .layout-app {
     line-height: 40px;
 }
 
+.sidebar.sidebar-fusion #menu > div ul > li > a[data-toggle="collapse"]:after {
+    content: "+";
+    font-size: 18px;
+    top: 12px;
+}
+
+.sidebar.sidebar-fusion #menu > div ul > li.active.hasSubmenu > a[data-toggle="collapse"]:after {
+    font-size: 18px;
+    content: "-";
+    top: 10px;
+}
+
 .navbar .user-action.user-action-btn-navbar {
-    padding: 5px;
+    padding: 8px 2px;
 }
 
 .alert {
@@ -405,7 +439,7 @@ html.app .loginWrapper .layout-app {
     top: 40px;
 }
 
-.imageLink{
+.imageLink {
     display: block;
 }
 
@@ -416,31 +450,49 @@ html.app .loginWrapper .layout-app {
     background-repeat: no-repeat;
     background-color: #d2d0d0;
 }
-.uploadButton{
+
+.uploadButton {
     margin-top: 30px;
 }
 
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-    background-color: initial;
+.btn-primary.btn-stroke {
+    background: 0 0;
 }
 
-ul.menu li > a > span {
-    display: block;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 85%;
+/* add sorting icons to gridview sort links */
+a.asc:after, a.desc:after, a[data-sort]:after {
+    position: relative;
+    top: 1px;
+    font-size: 12px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
 }
 
-.sidebar.sidebar-fusion #menu > div ul > li > a[data-toggle=collapse]:after {
-    right: 15px;
+a[data-sort]:after {
+    content: "\e119";
 }
 
-.sidebar.sidebar-fusion #menu > div ul > li > a {
-    padding-left: 10px;
-    text-align: center;
+a.asc:after {
+    content: "\e253";
 }
 
-.sidebar.sidebar-fusion #menu > div > ul > li > ul > li a {
-    padding-left: 15px;
+a.desc:after {
+    content: "\e252";
+}
+
+.btn-navbar.btn-primary {
+    border-color: transparent;
+}
+td.danger{
+    background-color: #f2dede !important;
+}
+td.warning{
+    background-color: #fcf8e3 !important;
+}
+td.default{
+    background-color: #f5f5f5 !important;
 }
